--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==3.6.1
+beautifulsoup4==4.11.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
@@ -19,6 +20,7 @@ PyYAML==6.0
 requests==2.28.1
 six==1.16.0
 sniffio==1.3.0
+soupsieve==2.3.2.post1
 starlette==0.20.4
 typing_extensions==4.3.0
 ujson==5.5.0
